--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "dialog-polyfill": "~0.4.2",
     "iron-elements": "PolymerElements/iron-elements#~1.0.7",
     "paper-elements": "PolymerElements/paper-elements#~1.0.7",
-    "neon-elements": "PolymerElements/neon-elements#~1.0.0"
+    "neon-elements": "PolymerElements/neon-elements#~1.0.0",
+    "page": "visionmedia/page.js#~1.6.4"
   }
 }
