--- a/bower.json
+++ b/bower.json
@@ -17,19 +17,13 @@
     "tests"
   ],
   "dependencies": {
-    "packery": "~1.4.3",
-    "photoswipe": "~4.1.1",
-    "tether": "~1.1.1",
-    "tether-drop": "drop#~1.4.2",
-    "tether-select": "~1.1.1",
-    "ckeditor": "~4.5.6",
-    "Sortable": "~1.4.2",
-    "SoundManager2": "soundmanager2#*",
-    "nanomodal": "~5.1.2",
-    "dialog-polyfill": "~0.4.2",
-    "iron-elements": "PolymerElements/iron-elements#~1.0.7",
-    "paper-elements": "PolymerElements/paper-elements#~1.0.7",
-    "neon-elements": "PolymerElements/neon-elements#~1.0.0",
-    "page": "visionmedia/page.js#~1.6.4"
+      "packery": null,
+      "photoswipe": null,
+      "iron-elements": null,
+      "paper-elements": null,
+      "neon-elements": null,
+      "google-map": null,
+      "page": null,
+      "suncalc": null
   }
 }
